--- a/index.html
+++ b/index.html
@@ -409,16 +409,17 @@
     </div>
     <script src="js/header.js"></script>
   </header>
-<div class="relative overflow-hidden w-full max-w-[full] mx-auto">
-  <div id="slider-track" class="flex transition-transform duration-700 ease-in-out w-full h-[550px]">
-    <div class="flex gap-0">
-      <img src="img/01-web-3840x1000.webp" class="w-full object-cover flex-shrink-0" />
-      <img src="img/3-web-3840x1000_7h5s-r9.webp" class="w-full object-cover flex-shrink-0" />
-      <img src="img/Çingiz-Abdullayev---İmza-saatı-web-.webp" class="w-full object-cover flex-shrink-0" />
-      <img src="img/Hero-banner-desktop-20_-discount.webp" class="w-full object-cover flex-shrink-0" />
-      <img src="img/martin-iden-desktop.webp" class="w-full object-cover flex-shrink-0" />
-    </div>
+<div class="relative overflow-hidden w-full max-w-[full] mx-auto h-[550px] mobil">
+  <div id="slider-track" class="flex transition-transform duration-700 ease-in-out w-full h-[500px] ">
+  <div class="flex gap-0">
+    <img src="img/01-web-3840x1000.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/1-endirim-mobil-1400x1000_ii8m-sl.webp" data-desktop="img/01-web-3840x1000.webp" alt="Slayd 1" />
+    <img src="img/3-web-3840x1000_7h5s-r9.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/drakula-mobil-1400x1000.webp" data-desktop="img/3-web-3840x1000_7h5s-r9.webp" alt="Slayd 2" />
+    <img src="img/Çingiz-Abdullayev---İmza-saatı-web-.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/Çingiz-Abdullayev---İmza-saatı-1400x1000.webp" data-desktop="img/Çingiz-Abdullayev---İmza-saatı-web-.webp" alt="Slayd 3" />
+    <img src="img/Hero-banner-desktop-20_-discount.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/Hero-banner-mobile-20_-discount-v2.webp" data-desktop="img/Hero-banner-desktop-20_-discount.webp" alt="Slayd 4" />
+    <img src="img/martin-iden-desktop.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/martin-iden-mobile.webp" data-desktop="img/martin-iden-desktop.webp" alt="Slayd 5" />
   </div>
+</div>
+
   <div class="absolute bottom-4 left-1/2 -translate-x-1/2 flex gap-1">
     <button class="w-2 h-2 rounded-full bg-gray-400 hover:bg-red-500 transition-all" data-index="0"></button>
     <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="1"></button>
