--- a/admin01.html
+++ b/admin01.html
@@ -232,7 +232,7 @@
                         <th scope="col" class="px-6 py-3">Pages</th>
                         <th scope="col" class="px-6 py-3">Content</th>
                         <th scope="col" class="px-6 py-3">Category</th>
-                        <th scope="col" class="px-6 py-3">Like, Dislike, View</th>
+                        <th scope="col" class="px-6 py-3">View</th>
                         <th scope="col" class="px-6 py-3">Img</th>
                         <th scope="col" class="px-6 py-3">CRUD</th>
                     </tr>
