--- a/details.html
+++ b/details.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<header class="w-full">
+  <header class="w-full">
     <div class="hidden lg:block">
       <div class="max-w-[1500px] mx-auto flex items-center justify-between px-4 gap-2 h-[120px]">
         <div class="flex items-center gap-4">
@@ -121,172 +121,10 @@
               </li>
             </ul>
           </div>
-          <div id="bedii-edeb-content" class="col-span-4 grid grid-cols-4 gap-4">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Antologiya</li>
-                <li>Bioqrafiyaç avtobioqrafiya & Xatirə</li>
-                <li>Detektiv</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-                <li>Fəlsəfə</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Hekayələr & Oçerklər</li>
-                <li>Kino və teatr</li>
-                <li>Klassik poemalar</li>
-                <li>Klassiklər</li>
-                <li>Komiks</li>
-                <li>Macəra</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Mifologiya</li>
-                <li>Nağıllar</li>
-                <li>Poemalar</li>
-                <li>Psixologiya</li>
-                <li>Romanlar & Novellalar</li>
-                <li>Satira</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Tarix, hüquq & Siyasi</li>
-                <li>Tarix roman</li>
-                <li>Triller, mistika & Qorxu</li>
-                <li>Təhsil, mənbə & Dil</li>
-              </ul>
-            </div>
-          </div>
-          <div id="qeyri-bedii-content" class="col-span-4 grid grid-cols-4 gap-4 hidden">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Ailə</li>
-                <li>Akademik</li>
-                <li>Aşpazlıq</li>
-                <li>Astromoniya</li>
-                <li>Bağbanlıq</li>
-                <li>Detektiv</li>
-                <li>Dini</li>
-                <li>Dəb</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Elm</li>
-                <li>Ezoterika</li>
-                <li>Fəaliyyətlər</li>
-                <li>Fəlsəfə</li>
-                <li>Hekayələr & Esselər</li>
-                <li>Heyvanlar</li>
-                <li>Jurnallar & Qəzetlər</li>
-                <li>Kino və teatr</li>
-                <li>Klassiklər</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Komiks</li>
-                <li>Komputer elmləri</li>
-                <li>Mifologiya</li>
-                <li>Musiqi</li>
-                <li>Poemalar</li>
-                <li>Psixologiya</li>
-                <li>Publisistika</li>
-                <li>Qeyri-bədii</li>
-                <li>Regional maraqlar</li>
-                <li>Romanlar & Novellalar</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Sağlamlıq, tibbi & Idman</li>
-                <li>Sitatlar & Aforizmlər</li>
-                <li>Sosiologiya</li>
-                <li>Şəxsi inkisaf</li>
-                <li>Səyahət & Məkanlar</li>
-                <li>Tarix, hüquq & Siyasi</li>
-                <li>Tarix roman</li>
-                <li>Təhsil, mənbə & Dil</li>
-                <li>Xəritələr</li>
-              </ul>
-            </div>
-          </div>
-          <div id="bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>3D kitab</li>
-                <li>Dedektiv</li>
-                <li>Heyvanlar</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-                <li>Hekayələr & Oçerklər</li>
-                <li>Klassik Poemalar</li>
-                <li>Klassiklər</li>
-                <li>Komiks</li>
-                <li>Macəra</li>
-                <li>Nağıllar</li>
-                <li>Oyuncaq kitablar</li>
-                <li>Poemalar</li>
-                <li>Romanlar & Novellalar</li>
-                <li>Satira</li>
-                <li>Tarix roman</li>
-                <li>Triller, mistika & Qorxu</li>
-                <li>Təhsil, mənbə & Dil</li>
-              </ul>
-            </div>
-          </div>
-          <div id="qeyri-bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>3D kitab</li>
-                <li>Dedektiv</li>
-                <li>Heyvanlar</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-                <li>Hekayələr & Oçerklər</li>
-                <li>Klassik Poemalar</li>
-                <li>Klassiklər</li>
-                <li>Komiks</li>
-                <li>Macəra</li>
-                <li>Nağıllar</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Sosiologiya</li>
-                <li>Şəxsi inkisaf</li>
-                <li>Səyahət & Məkanlar</li>
-                <li>Tarix, hüquq & Siyasi</li>
-                <li>Tarix roman</li>
-                <li>Təhsil, mənbə & Dil</li>
-                <li>Xəritələr</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Ailə</li>
-                <li>Akademik</li>
-                <li>Aşpazlıq</li>
-                <li>Astromoniya</li>
-                <li>Bağbanlıq</li>
-                <li>Detektiv</li>
-                <li>Dini</li>
-                <li>Dəb</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Kino və teatr</li>
-                <li>Klassik poemalar</li>
-                <li>Klassiklər</li>
-                <li>Antologiya</li>
-                <li>Bioqrafiyaç avtobioqrafiya & Xatirə</li>
-                <li>Detektiv</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-              </ul>
-            </div>
-          </div>
+          <div id="bedii-edeb-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
+          <div id="qeyri-bedii-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
+          <div id="bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
+          <div id="qeyri-bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
         </div>
       </div>
       <div class="max-w-[1500px] mx-auto flex items-center justify-between px-4 py-2 text-[15px] h-[45px]">
@@ -295,7 +133,7 @@
             <li><a href="#">Bestseller</a></li>
             <li><a href="#">Endirimlər</a></li>
             <li><a href="#">Müəlliflər</a></li>
-            <li><a href="#">Klassiklər</a></li>
+            <li><a href="category.html">Klassiklər</a></li>
           </ul>
         </div>
         <div class="flex gap-4">
@@ -338,7 +176,7 @@
     </div>
     <div class="lg:hidden">
       <div id="sidebar"
-        class="fixed top-0 left-0 h-[100vh] w-[50%] bg-white shadow-md transform -translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
+        class="fixed sidebar-custom top-0 left-0 h-[100vh] w-[50%] bg-white shadow-md transform -translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
         <div class="flex justify-between items-center p-4 border-b border-gray-300 text-[#7b7b7b]">
           <div class="flex items-center gap-1 cursor-pointer border p-2 border-gray-300 text-[#7b7b7b]">
             <img
@@ -389,8 +227,8 @@
               <a href="#" class="block p-[5px_0]">Hədiyyələr & Pazllar</a>
             </div>
           </div>
-              <hr class="my-2 border-gray-300 text-[#7b7b7b]">
-               <div class="group">
+          <hr class="my-2 border-gray-300 text-[#7b7b7b]">
+          <div class="group">
             <a href="#" class="block flex justify-between items-center text-[#0f172a80] mb-[10px]"
               onclick="toggleOtherLinks()">
               Digər <span id="other-links-toggle" class="text-xl text-[#7b7b7b]"><i
