--- a/index.html
+++ b/index.html
@@ -121,172 +121,10 @@
               </li>
             </ul>
           </div>
-          <div id="bedii-edeb-content" class="col-span-4 grid grid-cols-4 gap-4">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Antologiya</li>
-                <li>Bioqrafiyaç avtobioqrafiya & Xatirə</li>
-                <li>Detektiv</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-                <li>Fəlsəfə</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Hekayələr & Oçerklər</li>
-                <li>Kino və teatr</li>
-                <li>Klassik poemalar</li>
-                <li>Klassiklər</li>
-                <li>Komiks</li>
-                <li>Macəra</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Mifologiya</li>
-                <li>Nağıllar</li>
-                <li>Poemalar</li>
-                <li>Psixologiya</li>
-                <li>Romanlar & Novellalar</li>
-                <li>Satira</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Tarix, hüquq & Siyasi</li>
-                <li>Tarix roman</li>
-                <li>Triller, mistika & Qorxu</li>
-                <li>Təhsil, mənbə & Dil</li>
-              </ul>
-            </div>
-          </div>
-          <div id="qeyri-bedii-content" class="col-span-4 grid grid-cols-4 gap-4 hidden">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Ailə</li>
-                <li>Akademik</li>
-                <li>Aşpazlıq</li>
-                <li>Astromoniya</li>
-                <li>Bağbanlıq</li>
-                <li>Detektiv</li>
-                <li>Dini</li>
-                <li>Dəb</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Elm</li>
-                <li>Ezoterika</li>
-                <li>Fəaliyyətlər</li>
-                <li>Fəlsəfə</li>
-                <li>Hekayələr & Esselər</li>
-                <li>Heyvanlar</li>
-                <li>Jurnallar & Qəzetlər</li>
-                <li>Kino və teatr</li>
-                <li>Klassiklər</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Komiks</li>
-                <li>Komputer elmləri</li>
-                <li>Mifologiya</li>
-                <li>Musiqi</li>
-                <li>Poemalar</li>
-                <li>Psixologiya</li>
-                <li>Publisistika</li>
-                <li>Qeyri-bədii</li>
-                <li>Regional maraqlar</li>
-                <li>Romanlar & Novellalar</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Sağlamlıq, tibbi & Idman</li>
-                <li>Sitatlar & Aforizmlər</li>
-                <li>Sosiologiya</li>
-                <li>Şəxsi inkisaf</li>
-                <li>Səyahət & Məkanlar</li>
-                <li>Tarix, hüquq & Siyasi</li>
-                <li>Tarix roman</li>
-                <li>Təhsil, mənbə & Dil</li>
-                <li>Xəritələr</li>
-              </ul>
-            </div>
-          </div>
-          <div id="bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>3D kitab</li>
-                <li>Dedektiv</li>
-                <li>Heyvanlar</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-                <li>Hekayələr & Oçerklər</li>
-                <li>Klassik Poemalar</li>
-                <li>Klassiklər</li>
-                <li>Komiks</li>
-                <li>Macəra</li>
-                <li>Nağıllar</li>
-                <li>Oyuncaq kitablar</li>
-                <li>Poemalar</li>
-                <li>Romanlar & Novellalar</li>
-                <li>Satira</li>
-                <li>Tarix roman</li>
-                <li>Triller, mistika & Qorxu</li>
-                <li>Təhsil, mənbə & Dil</li>
-              </ul>
-            </div>
-          </div>
-          <div id="qeyri-bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden">
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>3D kitab</li>
-                <li>Dedektiv</li>
-                <li>Heyvanlar</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-                <li>Hekayələr & Oçerklər</li>
-                <li>Klassik Poemalar</li>
-                <li>Klassiklər</li>
-                <li>Komiks</li>
-                <li>Macəra</li>
-                <li>Nağıllar</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Sosiologiya</li>
-                <li>Şəxsi inkisaf</li>
-                <li>Səyahət & Məkanlar</li>
-                <li>Tarix, hüquq & Siyasi</li>
-                <li>Tarix roman</li>
-                <li>Təhsil, mənbə & Dil</li>
-                <li>Xəritələr</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Ailə</li>
-                <li>Akademik</li>
-                <li>Aşpazlıq</li>
-                <li>Astromoniya</li>
-                <li>Bağbanlıq</li>
-                <li>Detektiv</li>
-                <li>Dini</li>
-                <li>Dəb</li>
-              </ul>
-            </div>
-            <div>
-              <ul class="sec-menu text-[#0f172abf]">
-                <li>Kino və teatr</li>
-                <li>Klassik poemalar</li>
-                <li>Klassiklər</li>
-                <li>Antologiya</li>
-                <li>Bioqrafiyaç avtobioqrafiya & Xatirə</li>
-                <li>Detektiv</li>
-                <li>Elmi-fantastika & Fantaziya</li>
-              </ul>
-            </div>
-          </div>
+          <div id="bedii-edeb-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
+          <div id="qeyri-bedii-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
+          <div id="bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
+          <div id="qeyri-bedii-usaq-content" class="col-span-4 grid grid-cols-4 gap-4 hidden"></div>
         </div>
       </div>
       <div class="max-w-[1500px] mx-auto flex items-center justify-between px-4 py-2 text-[15px] h-[45px]">
@@ -295,7 +133,7 @@
             <li><a href="#">Bestseller</a></li>
             <li><a href="#">Endirimlər</a></li>
             <li><a href="#">Müəlliflər</a></li>
-            <li><a href="#">Klassiklər</a></li>
+            <li><a href="category.html">Klassiklər</a></li>
           </ul>
         </div>
         <div class="flex gap-4">
@@ -389,8 +227,8 @@
               <a href="#" class="block p-[5px_0]">Hədiyyələr & Pazllar</a>
             </div>
           </div>
-              <hr class="my-2 border-gray-300 text-[#7b7b7b]">
-               <div class="group">
+          <hr class="my-2 border-gray-300 text-[#7b7b7b]">
+          <div class="group">
             <a href="#" class="block flex justify-between items-center text-[#0f172a80] mb-[10px]"
               onclick="toggleOtherLinks()">
               Digər <span id="other-links-toggle" class="text-xl text-[#7b7b7b]"><i
@@ -409,30 +247,40 @@
     </div>
     <script src="js/header.js"></script>
   </header>
-<div class="relative overflow-hidden w-full max-w-[full] mx-auto h-[550px] mobil">
-  <div id="slider-track" class="flex transition-transform duration-700 ease-in-out w-full h-[500px] ">
-  <div class="flex gap-0">
-    <img src="img/01-web-3840x1000.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/1-endirim-mobil-1400x1000_ii8m-sl.webp" data-desktop="img/01-web-3840x1000.webp" alt="Slayd 1" />
-    <img src="img/3-web-3840x1000_7h5s-r9.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/drakula-mobil-1400x1000.webp" data-desktop="img/3-web-3840x1000_7h5s-r9.webp" alt="Slayd 2" />
-    <img src="img/Çingiz-Abdullayev---İmza-saatı-web-.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/Çingiz-Abdullayev---İmza-saatı-1400x1000.webp" data-desktop="img/Çingiz-Abdullayev---İmza-saatı-web-.webp" alt="Slayd 3" />
-    <img src="img/Hero-banner-desktop-20_-discount.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/Hero-banner-mobile-20_-discount-v2.webp" data-desktop="img/Hero-banner-desktop-20_-discount.webp" alt="Slayd 4" />
-    <img src="img/martin-iden-desktop.webp" class="slider-image w-full object-cover flex-shrink-0" data-mobile="img/martin-iden-mobile.webp" data-desktop="img/martin-iden-desktop.webp" alt="Slayd 5" />
-  </div>
-</div>
+  <div class="relative overflow-hidden w-full max-w-[full] mx-auto h-[550px] mobil">
+    <div id="slider-track" class="flex transition-transform duration-700 ease-in-out w-full h-[500px] ">
+      <div class="flex gap-0">
+        <img src="img/01-web-3840x1000.webp" class="slider-image w-full object-cover flex-shrink-0"
+          data-mobile="img/1-endirim-mobil-1400x1000_ii8m-sl.webp" data-desktop="img/01-web-3840x1000.webp"
+          alt="Slayd 1" />
+        <img src="img/3-web-3840x1000_7h5s-r9.webp" class="slider-image w-full object-cover flex-shrink-0"
+          data-mobile="img/drakula-mobil-1400x1000.webp" data-desktop="img/3-web-3840x1000_7h5s-r9.webp"
+          alt="Slayd 2" />
+        <img src="img/Çingiz-Abdullayev---İmza-saatı-web-.webp" class="slider-image w-full object-cover flex-shrink-0"
+          data-mobile="img/Çingiz-Abdullayev---İmza-saatı-1400x1000.webp"
+          data-desktop="img/Çingiz-Abdullayev---İmza-saatı-web-.webp" alt="Slayd 3" />
+        <img src="img/Hero-banner-desktop-20_-discount.webp" class="slider-image w-full object-cover flex-shrink-0"
+          data-mobile="img/Hero-banner-mobile-20_-discount-v2.webp"
+          data-desktop="img/Hero-banner-desktop-20_-discount.webp" alt="Slayd 4" />
+        <img src="img/martin-iden-desktop.webp" class="slider-image w-full object-cover flex-shrink-0"
+          data-mobile="img/martin-iden-mobile.webp" data-desktop="img/martin-iden-desktop.webp" alt="Slayd 5" />
+      </div>
+    </div>
 
-  <div class="absolute bottom-4 left-1/2 -translate-x-1/2 flex gap-1">
-    <button class="w-2 h-2 rounded-full bg-gray-400 hover:bg-red-500 transition-all" data-index="0"></button>
-    <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="1"></button>
-    <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="2"></button>
-    <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="3"></button>
-    <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="4"></button>
+    <div class="absolute bottom-4 left-1/2 -translate-x-1/2 flex gap-1">
+      <button class="w-2 h-2 rounded-full bg-gray-400 hover:bg-red-500 transition-all" data-index="0"></button>
+      <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="1"></button>
+      <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="2"></button>
+      <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="3"></button>
+      <button class="w-2 h-2 rounded-full bg-gray-300 hover:bg-red-500 transition-all" data-index="4"></button>
+    </div>
   </div>
-</div>
 
   <div class="max-w-[1500px] mx-auto px-4 py-[50px]">
     <h2 class="text-[30px] text-[#0f172a]"><span class="text-[#ee2d39] mr-[10px]">Aprelin</span>bestsellerləri</h2>
-    <div id="news-container" class="grid gap-2 justify-center grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 xl:grid-cols-6 2xl:grid-cols-6 max-w-[1500px] mx-auto">
-</div>
+    <div id="news-container"
+      class="grid gap-2 justify-center grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 xl:grid-cols-6 2xl:grid-cols-6 max-w-[1500px] mx-auto">
+    </div>
   </div>
   <script src="js/index.js" type="module"></script>
   <script src="js/slide.js"></script>
