--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
 
     <div class="px-4 lg:hidden">
-      <div class="flex items-center justify-between h-[120px]">
+      <div class="flex items-center justify-between mbl h-[120px]">
         <div class="flex items-center gap-6">
           <button id="menu-toggle" class="text-[28px]">
             <i class="fa-solid fa-bars"></i>
@@ -202,7 +202,7 @@
               <a href="#" class="block p-[15px_0_5px]">Bestseller</a>
               <a href="#" class="block p-[5px_0]">Endirimlər</a>
               <a href="#" class="block p-[5px_0]">Müəlliflər</a>
-              <a href="#" class="block p-[5px_0]">Klassiklər</a>
+              <a href="category.html" class="block p-[5px_0]">Klassiklər</a>
             </div>
           </div>
 
