--- a/category.html
+++ b/category.html
@@ -251,13 +251,24 @@
         </div>
         <script src="js/header.js"></script>
     </header>
+    <div
+        class="md:hidden flex justify-center gap-4 px-4 py-3 sticky top-0 bg-white/60 backdrop-blur-md z-20 rounded-b-xl">
+        <button onclick="openCategory()"
+            class="flex-1 flex items-center justify-center gap-2 px-4 py-2 bg-white border border-white/50 rounded-full text-[16px] font-medium">
+            <i class="fa-solid fa-grip"></i> Kateqoriyalar
+        </button>
+        <button onclick="openFilter()"
+            class="flex-1 flex items-center justify-center gap-2 px-4 py-2 bg-white border border-white/50 rounded-full text-[16px] font-medium">
+            <i class="fa-solid fa-filter"></i> Filterlər
+        </button>
+    </div>
     <div class="max-w-[1500px] mx-auto">
         <div id="main-title" class="px-4">
             <h3 class="text-[28px] font-semibold text-[#0f172a] border-t-[1px] border-[#cbd5e1] pt-[20px]"></h3>
         </div>
         <div class="pt-[10px] m-[5px_0_20px] " id="category-way"></div>
         <div class="flex min-h-screen">
-            <aside class="w-64 bg-white shadow-md p-4 border border-[#eee] rounded-xl">
+            <aside class=" hidden md:block w-64 bg-white shadow-md p-4 border border-[#eee] rounded-xl">
                 <h2 class="text-[16px] font-semibold mb-4">Kateqoriyalar</h2>
                 <ul id="categoryList" class="space-y-2 "></ul>
                 <div class="mt-6">
@@ -284,8 +295,55 @@
                 <div id="bookList" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"></div>
             </main>
         </div>
-
     </div>
+    <div id="categoryModal" class="fixed inset-0 bg-white z-50 hidden overflow-y-auto p-6">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-xl font-semibold">Kateqoriyalar</h2>
+                <button onclick="closeCategory()" class="text-xl">✕</button>
+            </div>
+            <ul id="categoryListMobile" class="space-y-2">
+            </ul>
+        </div>
+        <div id="filterModal" class="fixed inset-0 bg-white z-50 hidden overflow-y-auto p-6">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-xl font-semibold">Filterlər</h2>
+                <button onclick="closeFilter()" class="text-xl">✕</button>
+            </div>
+
+            <div class="mb-4">
+                <h3 class="font-medium mb-2">Dil</h3>
+                <div class="space-y-1 text-sm">
+                    <label><input type="checkbox" /> AZE</label><br />
+                    <label><input type="checkbox" /> RUS</label><br />
+                    <label><input type="checkbox" /> ENG</label>
+                </div>
+            </div>
+
+            <div class="mb-4">
+                <h3 class="font-medium mb-2">Qiymət</h3>
+                <div class="flex gap-2">
+                    <input type="number" class="border rounded px-2 py-1 w-full" placeholder="min" />
+                    <input type="number" class="border rounded px-2 py-1 w-full" placeholder="max" />
+                </div>
+            </div>
+        </div>
+    <script>
+        function openCategory() {
+            document.getElementById('categoryModal').classList.remove('hidden');
+        }
+
+        function closeCategory() {
+            document.getElementById('categoryModal').classList.add('hidden');
+        }
+
+        function openFilter() {
+            document.getElementById("filterModal").classList.remove("hidden");
+        }
+
+        function closeFilter() {
+            document.getElementById("filterModal").classList.add("hidden");
+        }
+    </script>
     <script src="js/category.js" type="module"></script>
 </body>
 
