--- a/category.html
+++ b/category.html
@@ -152,7 +152,7 @@
         </div>
 
         <div class="px-4 lg:hidden">
-            <div class="flex items-center justify-between h-[120px]">
+            <div class="flex items-center justify-between mbl h-[120px]">
                 <div class="flex items-center gap-6">
                     <button id="menu-toggle" class="text-[28px]">
                         <i class="fa-solid fa-bars"></i>
