--- a/details.html
+++ b/details.html
@@ -202,7 +202,7 @@
               <a href="#" class="block p-[15px_0_5px]">Bestseller</a>
               <a href="#" class="block p-[5px_0]">Endirimlər</a>
               <a href="#" class="block p-[5px_0]">Müəlliflər</a>
-              <a href="#" class="block p-[5px_0]">Klassiklər</a>
+              <a href="category.html" class="block p-[5px_0]">Klassiklər</a>
             </div>
           </div>
 
@@ -245,6 +245,34 @@
       </div>
       <div id="overley" class="fixed inset-0 bg-gray-800 opacity-50 hidden z-40 overflow-hidden"></div>
     </div>
+<div class="fixed bottom-0 left-0 w-full bg-white border-t border-gray-200 shadow-md z-50 md:hidden">
+
+  <div class="flex justify-around items-center text-xs text-gray-500 py-2">
+    <button id="menu-link" class="flex flex-col items-center hover:text-blue-600">
+            <i class="fa-solid fa-bars text-[24px] mb-[4px]"></i>Menyu
+          </button>
+    <a href="#" class="flex flex-col items-center hover:text-blue-600">
+      <i class="fa-solid fa-magnifying-glass text-[24px] mb-[4px]"></i>
+      Axtarış
+    </a>
+
+    <a href="#" class="flex flex-col items-center hover:text-blue-600">
+      <i class="fa-solid fa-bag-shopping text-[24px] mb-[4px]"></i>
+      Səbət
+    </a>
+
+    <a href="#" class="flex flex-col items-center hover:text-blue-600">
+      <i class="fa-regular fa-user text-[24px] mb-[4px]"></i>
+      Hesabım
+    </a>
+
+    <a href="#" class="flex flex-col items-center hover:text-blue-600">
+      <i class="fa-solid fa-phone text-[24px] mb-[4px]"></i>
+      Əlaqə
+    </a>
+  </div>
+</div>
+
     <script src="js/header.js"></script>
   </header>
   <div class="max-w-[1500px] mx-auto ">
