--- a/details.html
+++ b/details.html
@@ -302,7 +302,7 @@
           <button onclick="closeModal()"
             class="bg-black text-white px-6 py-2 rounded-full hover:bg-gray-800 transition">Alış-verişə davam
             et</button>
-          <button id="addToCartBtn" class="bg-[#ef3340] text-white px-6 py-2 rounded-full hover:bg-red-700 transition">Səbət</button>
+          <button id="addToBasket" class="bg-[#ef3340] text-white px-6 py-2 rounded-full hover:bg-red-700 transition">Səbət</button>
         </div>
       </div>
     </div>
